Fixed layout issues with boostrap table.

--- a/designer/src/main/webapp/archetype-editor.css
+++ b/designer/src/main/webapp/archetype-editor.css
@@ -130,8 +130,8 @@ label {
 }
 
 .tab-pane.padded {
-	xpadding-left: 10px;
-  xpadding-right: 10px;
+	padding-left: 10px;
+  padding-right: 10px;
   padding-bottom: 20px;
 }
 
